[package]
name = "dusk-precompiler"
description = "Crate, that contains a precompiler plugin for dusk"
readme = "README.md"
license-file = "LICENSE"
license = "GPL-3.0-or-later"
version = "0.0.0"
authors = ["Andy Gozas <andy@gozas.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["dylib"]

[dependencies]
#dusk-api = "0.0.9"
dusk-api = {path = "/home/andy/git/dusk-api"}
dusk-syntax = {path = "/home/andy/git/dusk-syntax"}
unescape = "0.1.0"
